[package]
name = "p2p_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
imgui = "0.11.0"
sdl2 = "0.34.5"
imgui-sdl2-support = "0.11.0"
glow = "0.12.2"
imgui-glow-renderer = "0.11.0"
dialog = "0.3.0"